# photolikes

./: .gitignore  README.md  pyproject.toml
scripts/: release.py
src/bot/: main.py
src/common/utils/: cached_object.py
src/config/: base_config.py
src/model/: model_loader.py  model_trainer.py
src/model/loaders/: filesystem_model_loader.py
src/model/trainers/: model_trainer_resnet.py
src/scheduler/: __main__.py
src/scraper/item_middleware/: mongodb_middleware.py
src/scraper/spiders/: vk_dating_photos_spider.py
