[tool.poetry]
name = "photolikes"
version = "0.1.0"
description = ""
authors = ["iburakov <speedwatson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
Scrapy = "2.4.0"
mongoengine = "0.17.0"
Pillow = "8.0.1"
flask = "1.1.2"
tensorflow = "2.4.0"
pandas = "1.2.0"
python-resize-image = "1.1.19"
image-classifiers = "1.0.0b1"
schedule = "0.6.0"
scikit-learn = "0.24.0"
keras_applications = "1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
